Ajustando erro apontado pelo ng-build

--- a/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
+++ b/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
@@ -123,7 +123,7 @@
                             <div class="ui-g-12">
                                 <div class="ui-g-3">
                                     <span class="md-inputfield">
-                                        <input pInputText [(ngModel)] = " volume "  type="text" formControlName="volume" />
+                                        <input pInputText type="text" formControlName="volume" />
                                         <label>Volume (ml)</label>
                                     </span>
                                 </div>
