Criação de componentes referente Listagem de Pré-Cadastro

--- a/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
@@ -78,13 +78,13 @@
                 <div class="ui-g-12">
                     <p-radioButton
                         value="true"
-                        name="status"
+                        name="ativo"
                         label="Sim"
                         formControlName="status"
                     ></p-radioButton>
                     <p-radioButton
                         value="false"
-                        name="status"
+                        name="ativo"
                         label="Não"
                         formControlName="status"
                     ></p-radioButton>
