Padronizar nome Conselho Profissional <-> CRM

--- a/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
+++ b/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
@@ -52,7 +52,7 @@
                         [parentFormGroup]="formGroup"
                         [required]="true"
                         name="crm"
-                        label="Conselho Profissional"
+                        label="CRM"
                     >
                     </app-crm>
                 </div>
