Insere correção em paginação de pesquisa

--- a/frontend/src/app/pacientes/components/listagem-pre-cadastro/listagem-pre-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/listagem-pre-cadastro/listagem-pre-cadastro.component.html
@@ -11,6 +11,7 @@
                             class="ui-inputtext"
                             name="filtro"
                             [(ngModel)]="nome"
+                            #query
                         />
                         <label>Nome paciente</label>
                     </span>
@@ -24,7 +25,7 @@
                             label="Pesquisar"
                             icon="ui-icon-search"
                             bTooltip="Pesquisar paciente por nome."
-                            (click)="pesquisar()"
+                            (click)="datatable.refresh(query.value)"
                         ></button>
                     </div>
                 </div>
