--- a/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
+++ b/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
@@ -2,6 +2,9 @@
     <p-fieldset legend="Internar Paciente">
         <form [formGroup]="formGroup">
             <div class="ui-g-12">
+                <app-card-paciente [identificador]="solicitacao.pacienteId"></app-card-paciente>
+            </div>
+            <div class="ui-g-12">
                 <!-- Leito + Quarto + Unidade Funcional -->
                 <div class="ui-g-2">
                     <app-leito
