--- a/frontend/src/app/prescricao-medica/prescricao-medica.component.html
+++ b/frontend/src/app/prescricao-medica/prescricao-medica.component.html
@@ -1,33 +1,24 @@
 <div class="ui-g ui-fluid">
     <div class="ui-g-12">
         <div class="card card-w-title">
-            <h1>Pacientes</h1>
+            <h1>Prescrição Médica</h1>
             <div class="ui-g">
                 <div class="ui-g-12 ui-md-12 ui-fluid">
                     <span class="md-inputfield">
-                        <input type="text" pInputText class="ui-inputtext" name="filtro" />
+                        <input type="text" pInputText class="ui-inputtext" name="filtro" [(ngModel)]="nome" #query />
                         <label>Nome paciente</label>
                     </span>
                 </div>
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-g-12 ui-md-6">
-                        <button pButton label="Pesquisar" icon="ui-icon-search"></button>
+                        <button pButton label="Pesquisar" icon="ui-icon-search" bTooltip="Pesquisar Paciente por Nome"
+                            (click)="pesquisar()"></button>
                     </div>
                 </div>
                 <div class="ui-g-12 ui-md-3"></div>
 
-                <basis-datatable
-                    #datatable
-                    type= "server"
-                    [url]="searchUrl"
-                    [rows]="10"
-                    [value]="pacientes"
-                    [disableView]="true"
-                    [disableEdit]="true"
-                    [disableDelete]="true"
-                    (buttonClick)="btnClick($event)"
-
-                >
+                <basis-datatable #datatable type="server" [url]="searchUrl" [rows]="10" [value]="pacientes"
+                    [disableView]="true" [disableEdit]="true" [disableDelete]="true" (buttonClick)="btnClick($event)">
                     <p-column header="Nome" field="nome"></p-column>
                     <p-column header="Dt. Nascimento" field="dataDeNascimento">
                         <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
@@ -36,11 +27,13 @@
                     </p-column>
 
 
-                    <basis-datatable-button icon="restaurant" name="prescrever-dieta" [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Dieta"
+                    <basis-datatable-button icon="restaurant" name="prescrever-dieta"
+                        [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Dieta"
                         class="ui-button-info">
                     </basis-datatable-button>
 
-                    <basis-datatable-button icon="assignment" name="prescrever-medicamento" [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Medicamento"
+                    <basis-datatable-button icon="assignment" name="prescrever-medicamento"
+                        [disabled]="(datatable.selectedRow) ? false : true" bTooltip="Prescrever Medicamento"
                         class="ui-button-info">
                     </basis-datatable-button>
 
@@ -50,4 +43,3 @@
         </div>
     </div>
 </div>
-
