Insere Validação SUS no Pré-cadastro

--- a/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
@@ -96,17 +96,17 @@
                 <div class="ui-g-3">
                     <button
                         pButton
-                        type="button"
+                        type="reset"
                         label="Cancelar"
                         pTooltip="Cancelar registro de Pré-Cadastro."
                     ></button>
                 </div>
-
                 <div class="ui-g-3">
                     <button
                         pButton
                         type="submit"
                         label="Salvar"
+                        [disabled]="preCadastro.invalid"
                         pTooltip="Salvar registro de Pré-Cadastro."
                     ></button>
                 </div>
