--- a/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
@@ -103,7 +103,7 @@
                     <label>Nº do Cartão SUS</label>
                 </span>
             </div>
-            <div class="ui-g-12">
+            <!-- <div class="ui-g-12">
                 <div class="ui-g-12">
                     <b>Ativo</b>
                 </div>
@@ -112,23 +112,22 @@
                         value="true"
                         name="ativo"
                         label="Sim"
-                        formControlName="status"
+                        formControlName="ativo"
                     ></p-radioButton>
                     <p-radioButton
                         value="false"
                         name="ativo"
                         label="Não"
-                        formControlName="status"
+                        formControlName="ativo"
                     ></p-radioButton>
                 </div>
-            </div>
-
+            </div> -->
             <div class="ui-g-12">
                 <div class="ui-g-3"></div>
                 <div class="ui-g-3">
                     <button
                         pButton
-                        type="reset"
+                        type="button"
                         label="Cancelar"
                         pTooltip="Cancelar registro de Pré-Cadastro."
                     ></button>
