--- a/frontend/src/app/pacientes/components/triagem/triagem.component.html
+++ b/frontend/src/app/pacientes/components/triagem/triagem.component.html
@@ -82,6 +82,20 @@
                     </ng-template>
                 </p-column>
                 <p-column header="Classificação" field="classificacaoDeRisco" [sortable]="true">
+                    <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                        <span>
+                            <div
+                                [ngClass]="{
+                                    urgente: rowData[col.field] == 'URGENTE',
+                                    poucoUrgente: rowData[col.field] == 'POUCO_URGENTE',
+                                    muitoUrgente: rowData[col.field] == 'MUITO_URGENTE',
+                                    emergencia: rowData[col.field] == 'EMERGENCIA',
+                                    naoUrgente: rowData[col.field] == 'NAO_URGENTE'
+                                }"
+                                [pTooltip]="rowData[col.field]"
+                            ></div>
+                        </span>
+                    </ng-template>
                 </p-column>
                 <basis-datatable-button class="ui-button-success" name="edit" icon="edit">
                 </basis-datatable-button>
