--- a/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
+++ b/frontend/src/app/consulta/components/listar-consultas/listar-consultas.component.html
@@ -116,6 +116,55 @@
                     <label>Data final</label>
                 </span>
             </div>
+
+            <div class="ui-g-12 ui-sm-12">
+                <div class="ui-g-2">
+                    <button
+                        pButton
+                        type="button"
+                        label="Pesquisar"
+                        pTooltip="Pesquisar consultas de paciente."
+                    ></button>
+                </div>
+                <div class="ui-g-2">
+                    <button
+                        pButton
+                        type="button"
+                        label="Limpar"
+                        pTooltip="Limpar pesquisa de consultas."
+                    ></button>
+                </div>
+                <div class="ui-g-2">
+                    <button
+                        pButton
+                        type="button"
+                        label="Exportar"
+                        pTooltip="Exportar arquivo de consultas."
+                    ></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="ui-g-12 ui-sm-12">
+            <basis-datatable
+                type="memory"
+                [disableView]="true"
+                [disableEdit]="true"
+                [disableDelete]="true"
+            >
+                <p-column field="historico" header="Hist"></p-column>
+                <p-column field="consultas" header="Consultas"></p-column>
+                <p-column field="dataHora" header="Data/Hora"></p-column>
+                <p-column field="condicaoAtendimento" header="Cond. Atend."></p-column>
+                <p-column field="codigoCentral" header="Central"></p-column>
+                <p-column field="grade" header="Grade"></p-column>
+                <p-column field="especialidade" header="Especialidade"></p-column>
+                <p-column field="unidadeFuncional" header="Unid. Func."></p-column>
+                <p-column field="equipe" header="Equipe"></p-column>
+                <p-column field="profissional" header="Profissional"></p-column>
+                <p-column field="situacaoAtendimento" header="Sit. Atend."></p-column>
+                <p-column field="excedente" header="Excedente"></p-column>
+            </basis-datatable>
         </div>
     </form>
 </div>
