--- a/frontend/src/app/internacao/formulario-unidades/components/prescricao-medica-unidade/prescricao-medica-unidade.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/prescricao-medica-unidade/prescricao-medica-unidade.component.html
@@ -1,1 +1,44 @@
-<p>prescricao-medica-unidade works!</p>
+<form [formGroup]="precricaoEnfermagem">
+    <div class="ui-g">
+        <div class="ui-g-12">
+            <div class="ui-g-3 ui-sm-12">
+                <span class="ui-float-label">
+                    <p-inputMask
+                        formControlName="horarioValidade"
+                        mask="99:99"
+                        pTooltip="Digite o horário da prescrição médica.Ultilize o formato HH:MM."
+                    ></p-inputMask>
+                    <label>Horário Validade</label>
+                </span>
+            </div>
+            <div class="ui-g-3 ui-sm-12">
+                <span class="ui-float-label">
+                    <input
+                        type="text"
+                        pInputText
+                        formControlName="tempoAdiantamento"
+                        pTooltip="Digite a quantidade de tempo de adiantamento da prescrição de enfermagem."
+                    />
+                    <label>Tempo Adiantada</label>
+                </span>
+            </div>
+            <div class="ui-g-3 ui-sm-12">
+                <span class="ui-float-label">
+                    <p-dropdown formControlName="unidadeTempo"> </p-dropdown>
+                    <label>Unidade Tempo</label>
+                </span>
+            </div>
+            <div class="ui-g-3 ui-sm-12">
+                <span class="ui-float-label">
+                    <input
+                        type="text"
+                        pInputText
+                        formControlName="numeroVias"
+                        pTooltip="Digite o número de vias da prescrição médica."
+                    />
+                    <label>Número de vias</label>
+                </span>
+            </div>
+        </div>
+    </div>
+</form>
