--- a/frontend/src/app/internacao/formulario-unidades/components/prescricao-medica-unidade/prescricao-medica-unidade.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/prescricao-medica-unidade/prescricao-medica-unidade.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="precricaoEnfermagem">
+<form [formGroup]="precricaoMedica">
     <div class="ui-g">
         <div class="ui-g-12">
             <div class="ui-g-3 ui-sm-12">
